# Assignment-3

./: README.md  assignment_3_genAIuse.txt  pyproject.toml
tutorials/: Part4_tutorial.ipynb  Part4_tutorial_A-C.ipynb  fea_tutorial_1.ipynb
